--- a/index.html
+++ b/index.html
@@ -3,38 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
     <title>NavaneethPK</title>
+    <link rel="icon" type="image/png" href="https://img.icons8.com/emoji/48/telescope-.png">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f6fff8;
+        }
+        a {
+            text-align: left;
+            font-size: 18px;
+            text-decoration: none;
+            color: #212529;
+            font-family: 'Ubuntu Mono', monospace;
+        }
+        a:hover {
+            color: #495057;
+        }
+
+    </style>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-left">
-            <a href="index.html">NavaneethPK</a>
-        </div>
-        <div class="navbar-right">
-            <a href="research.html">Research</a>
-            <a href="extra.html">Hobbies</a>
-            <a href="about.html">About</a>
-        </div>
-    </nav>
-    <div class="home-content">
-        <div class="left-content">
-            <h1>Hi,</h1>
-            <p>I'm <strong>Navaneeth</strong>, a physics postgraduate from Kerala, India. <br>
-            I code, design graphics, make Notion templates, and write about science and productivity tools.</p>
-            <div class="social-icons">
-                <a href="#"><img src="assets/code.png" alt="Github"></a>
-                <a href="#"><img src="assets/design.png" alt="Pintrest"></a>
-                <a href="#"><img src="assets/notion.png" alt="Gumroad"></a>
-                <a href="#"><img src="assets/write.png" alt="Substack"></a>
-            </div>
-        </div>
-        <div class="right-content">
-            <img src="assets/blackcv.png" alt="Profile Image">
-        </div>
+    <div>
+        <p><a href="https://navaneethpk.com/">NavaneethPK</a></p><br>
+        <p><a href="https://orcid.org/0000-0001-9092-2903">ORCID</a></p>
+        <p><a href="https://github.com/navaneethnpk">GitHub</a></p>
+        <p><a href="https://www.youtube.com/watch?v=uaaC57tcci0">SocialMedia</a></p>
     </div>
-    <footer class="copyright">
-        &copy; 2023 NavaneethPK. All rights reserved.
-    </footer>
 </body>
 </html>
